# OpenEarthGnomes

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  DatabaseManager.cpp  DatabaseManager.h  DatebaseManager.cpp  GenomeLoader.cpp  GenomeLoader.h  LICENSE  README.md  build_linux.sh  build_windows.bat  config.ini  config_sample.ini  main.cpp  setup.sql  test_mysql.cpp
.github/workflows/: build.yml  ci.yml  cpp-ci.yml
Genomes/: Data  sample_genomes.fasta
datebase/: config_sample.ini  setup.sql
include/: database.h
libs/inih/: CMakeLists.txt  INIReader.cpp  INIReader.h  ini.c  ini.h
src/: Ydatabase.cpp  database.cpp  main.cpp
tests/: CMakeLists.txt  basic_test.cpp  db_test.cpp
